--- a/src/layouts/pricing/list.pug
+++ b/src/layouts/pricing/list.pug
@@ -47,17 +47,17 @@ html(lang='en')
                     | SMS credits
                   .pt-list-item
                     span.pt-tooltip-show-text
+                      span.pt-tooltip-show Setup & teardown scripts
+                      span.pt-tooltip.pt-tooltip-right-bottom
+                        span.pt-tooltip-content
+                          | Have full control over request data and responses using custom Javascript snippets.
+                  .pt-list-item
+                    span.pt-tooltip-show-text
                       span.pt-tooltip-show CI/CD triggers
                       span.pt-tooltip.pt-tooltip-right-bottom
                         span.pt-tooltip-content
                           | Trigger a check run from the terminal or your CI/CD pipeline for automated testing before or after
                           | building and deploying. Works with any CI/CD provider.
-                  .pt-list-item
-                    span.pt-tooltip-show-text
-                      span.pt-tooltip-show Setup & teardown scripts
-                      span.pt-tooltip.pt-tooltip-right-bottom
-                        span.pt-tooltip-content
-                          | Have full control over request data and responses using custom Javascript snippets.
                   .pt-list-item
                     | Pagerduty integration
                   .pt-list-item
@@ -134,12 +134,12 @@ html(lang='en')
                         .pt-value 10
                       .pt-list-item
                         .pt-text
-                          | CI/CD triggers
+                          | Setup & teardown scripts
                         .pt-value
-                          i.ion-close-round
+                          i.ion-checkmark-round
                       .pt-list-item
                         .pt-text
-                          | Setup & teardown scripts
+                          | CI/CD triggers
                         .pt-value
                           i.ion-close-round
                       .pt-list-item
@@ -227,12 +227,12 @@ html(lang='en')
                           | 50
                       .pt-list-item
                         .pt-text
-                          | CI/CD triggers
+                          | Setup & teardown scripts
                         .pt-value
                           i.ion-checkmark-round
                       .pt-list-item
                         .pt-text
-                          | Setup & teardown scripts
+                          | CI/CD triggers
                         .pt-value
                           i.ion-checkmark-round
                       .pt-list-item
@@ -320,12 +320,12 @@ html(lang='en')
                           | 150
                       .pt-list-item
                         .pt-text
-                          | CI/CD triggers
+                          | Setup & teardown scripts
                         .pt-value
                           i.ion-checkmark-round
                       .pt-list-item
                         .pt-text
-                          | Setup & teardown scripts
+                          | CI/CD triggers
                         .pt-value
                           i.ion-checkmark-round
                       .pt-list-item
@@ -378,7 +378,7 @@ html(lang='en')
                             span.pt-tooltip-show 1 min / 10 min
                             span.pt-tooltip
                               span.pt-tooltip-content
-                                | API checks can be scheduled every minute, browser checks every 5 min
+                                | API checks can be scheduled every minute, browser checks every 10 min
                       .pt-list-item
                         .pt-text Public dashboard
                         .pt-value
@@ -413,12 +413,12 @@ html(lang='en')
                           | 300
                       .pt-list-item
                         .pt-text
-                          | CI/CD triggers
+                          | Setup & teardown scripts
                         .pt-value
                           i.ion-checkmark-round
                       .pt-list-item
                         .pt-text
-                          | Setup & teardown scripts
+                          | CI/CD triggers
                         .pt-value
                           i.ion-checkmark-round
                       .pt-list-item
