--- a/src/layouts/partials/hero-section.pug
+++ b/src/layouts/partials/hero-section.pug
@@ -8,7 +8,7 @@ section.hero-section
           | Monitor the performance and correctness of your API endpoints & vital site transactions from a single,
           | simple dashboard.
         .mb-4
-          a.btn.btn-success.btn-lg(href='https://app.checklyhq.com/signup') Start your free trial
+          a.signup-button.btn.btn-success.btn-lg(href='https://app.checklyhq.com/signup') Start your free trial
     .row
       .col-sm-12.text-center
           img.hero-image.img-fluid(src='/images/dashboard-screen@2x.png' alt='checkly monitoring dashboard')
