--- a/src/layouts/partials/navbar.pug
+++ b/src/layouts/partials/navbar.pug
@@ -32,6 +32,6 @@ nav.navbar.navbar-toggleable-md.fixed-top
               a#dashboard-button.btn.btn-outline-secondary.my-2.my-sm-0.mr-3.ml-md-3(style='display: none;' href='https://app.checklyhq.com/')
                 | Dashboard
                 .ion-arrow-right-c.d-inline.ml-2
-              a.btn.btn-success.my-2.my-sm-0(href='https://app.checklyhq.com/signup') Start your free trial
+              a.signup-button.btn.btn-success.my-2.my-sm-0(href='https://app.checklyhq.com/signup') Start your free trial
             | !{'{{end}}'}
 
