feat: adds testimonial and other stuff

--- a/site/layouts/shortcodes/sm-4-col-item.html
+++ b/site/layouts/shortcodes/sm-4-col-item.html
@@ -2,5 +2,5 @@
 {{ $body := .Get 1 }}
 <div class="col-sm-4 mb-lg-3">
 	<h5 class="add-star-before">{{$header}}</h5>
-	<p>{{$body}}</p>
+	<p>{{$body | markdownify}}</p>
 </div>
