--- a/site/layouts/shortcodes/sm-6-col-item.html
+++ b/site/layouts/shortcodes/sm-6-col-item.html
@@ -2,6 +2,6 @@
 {{ $image := .Get "image" }}
 <div class="col-sm-6 mb-lg-3">
 	<h3 class="section-header">{{$header}}</h3>
-  <p>{{.Inner}}</p>
+  <p>{{.Inner | markdownify}}</p>
   <img src="{{$image}}" alt="">
 </div>
