--- a/src/layouts/index.pug
+++ b/src/layouts/index.pug
@@ -11,7 +11,7 @@ html(lang='en')
                 include partials/alerting-section.pug
                 include partials/results-section.pug
                 include partials/trusted-by-section.pug
-                include partials/testimonial-trial-row.pug
+                include partials/testimonial-three-col-row
                 include partials/all-features.pug
                 include partials/tweets.pug
                 include partials/public-stats-section.pug
