--- a/src/scss/_product.scss
+++ b/src/scss/_product.scss
@@ -34,7 +34,8 @@
         font-family: Ionicons;
         position: relative;
         font-size: 1rem;
-        top: -3px
+        top: -3px;
+        margin-right: .75rem;
       }
     }
 
