--- a/site/layouts/shortcodes/feature-row.html
+++ b/site/layouts/shortcodes/feature-row.html
@@ -4,7 +4,7 @@
 	<div class="col-sm-4 text-left d-flex">
 		<div class="feature-row-item-wrapper my-auto">
 			<h3 class="section-header mt-0 pb-0">{{$header}}</h3>
-			<p>{{.Inner}}</p>
+			<p>{{.Inner | markdownify }}</p>
 		</div>
 	</div>
 	<div class="col-sm-8 text-right">
