--- a/src/scss/sections/_testimonials.scss
+++ b/src/scss/sections/_testimonials.scss
@@ -1,41 +1,71 @@
 .testimonial-section {
-
-  padding-top: $section-top-padding;
-  padding-bottom: 2 * $section-bottom-padding;
+  .testimonial-card {
+    border: none;
+    max-height: 354px;
+    border-radius: $border-radius-lg;
+    .card-block {
+      padding: 2 * $spacer;
+    }
+  }
+  .testimonial-logo {
+    height: 24px;
+    margin-bottom: 1rem;
+  }
+  .testimonial-text {
+    font-family: Roboto, "fakt-soft", system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Droid Sans, Helvetica Neue, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-size: $font-size-base;
+    color: $gray-darkish;
+    line-height: 30px !important;
+    font-weight: 300;
+    padding: .5 * $spacer-y 0;
+  }
+  .testimonial-portrait {
+    display: flex;
+    flex-direction: column;
+    float: left;
+    img {
+      width: 50px;
+      margin-right: 1rem;
+    }
+    .testimonial-name-badge {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      float: left;
+    }
+  }
 
   &.testimonial-1 {
-    .testimonial-card {
-      border: none;
-      max-height: 354px;
-      .card-block {
-        padding: 2 * $spacer;
-      }
-    }
-    .testimonial-logo {
-      height: 24px;
-      margin-bottom: 1rem;
-    }
+    padding-top: $section-top-padding;
+    padding-bottom: 2 * $section-bottom-padding;
     .testimonial-text {
       min-height: 160px;
       max-height: 160px;
-      font-size: $font-size-base;
-      color: $gray-dark;
-      font-weight: 300;
-      padding: .5 * $spacer-y 0;
     }
     .testimonial-portrait {
-      display: flex;
-      flex-direction: column;
-      float: left;
       img {
         width: 50px;
         margin-right: 1rem;
       }
-      .testimonial-name-badge {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        float: left;
+    }
+  }
+
+  &.testimonial-2 {
+    padding-top: $section-top-padding;
+    padding-bottom: $section-bottom-padding;
+    .testimonial-text {
+      min-height: 100px;
+      max-height: 320px;
+    }
+    .testimonial-portrait {
+      img {
+        width: 65px;
+        margin-right: 1rem;
+      }
+    }
+    .testimonial-card {
+      .card-block {
+        padding: 2 * $spacer 3 * $spacer;
       }
     }
   }
@@ -44,5 +74,9 @@
 @include media-breakpoint-down(sm) {
   .testimonial-section {
     padding-top: $section-top-padding;
+
+    &.testimonial-2 {
+      padding-bottom: 2 * $section-bottom-padding;
+    }
   }
 }
