--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -48,37 +48,13 @@
     gtag('js', new Date());
     gtag('config', 'UA-110523681-1');
   </script>
-  <!-- Drift code-->
-  <script type="text/plain" async class="optanon-category-2">
-    {{ if ne .Section "blog" }}
-      if (location.host === 'checklyhq.com') {
-        !(function() {
-          var t = window.driftt = window.drift = window.driftt || []
-          if (!t.init) {
-            if (t.invoked) return void(window.console && console.error && console.error('Drift snippet included twice.'))
-            t.invoked = !0, t.methods = ['identify', 'config', 'track', 'reset', 'debug', 'show', 'ping', 'page', 'hide', 'off', 'on'],
-              t.factory = function(e) {
-                return function() {
-                  var n = Array.prototype.slice.call(arguments)
-                  return n.unshift(e), t.push(n), t
-                }
-              }, t.methods.forEach(function(e) {
-              t[e] = t.factory(e)
-            }), t.load = function(t) {
-              var e = 3e5,
-                n = Math.ceil(new Date() / e) * e,
-                o = document.createElement('script')
-              o.type = 'text/javascript', o.async = !0, o.crossorigin = 'anonymous', o.src = 'https://js.driftt.com/include/' + n + '/' + t + '.js'
-              var i = document.getElementsByTagName('script')[0]
-              i.parentNode.insertBefore(o, i)
-            }
-          }
-        }())
-        drift.SNIPPET_VERSION = '0.3.1'
-        drift.load('7bxit3egu3zv')
-      }
-    {{ end }}
+  <!-- Intercom code-->
+  <script>
+    window.intercomSettings = {
+      app_id: 'ep3ft8gg'
+    }
   </script>
+  <script async class="optanon-category-2">(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/ep3ft8gg';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();</script>
 
   <script async src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
 
