feat: remove Mailchimp, style: spruce up tweets and footer

--- a/src/layouts/partials/footer.pug
+++ b/src/layouts/partials/footer.pug
@@ -21,7 +21,7 @@ footer.footer
                         li
                             a(href='https://status.checklyhq.com/' target='_blank') Live dashboard
                             span.green-dot
-            .col-sm-2
+            .col-sm-3
                 .mb-3.mb-md-0
                     h6 Company
                     ul
@@ -30,27 +30,22 @@ footer.footer
                         li
                             a(href='https://blog.checklyhq.com/', target='_blank') Blog
                         li
-                            a(href='/support') Support
-                        li
                             a(href='/about') About us
                         li
                             a(href='/terms') Terms of Use
                         li
                             a(href='/privacy') Privacy policy
-            .col-sm-5
-                h6 Get on topic product info and updates
-                #mc_embed_signup
-                    form.form-inline(action="https://run.us15.list-manage.com/subscribe/post?u=9af9712f622c6511cb2113669&amp;id=adb061483c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate)
-                        input.form-control.email-address-input.mb-3.mb-md-0.mr-md-2(type="email" value="" name="EMAIL"  width="280px" id="mce-EMAIL" placeholder="Email address")
-                        button.btn.btn-primary.submit-button(type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button") Subscribe
-
-                        #mce-responses.clear
-                            #mce-error-response.response(style="display:none")
-                            #mce-success-response.response(style="display:none")
-                        div(style="position: absolute; left: -5000px;" aria-hidden="true")
-                            input(type="text" name="b_9af9712f622c6511cb2113669_adb061483c" tabindex="-1" value="")
-                .pt-2.text-muted
-                    small no spam - unsubscribe anytime
+            .col-sm-3
+                .mb-3.mb-md-0
+                    h6 Connect
+                    ul
+                        li
+                            a(id="open-intercom-link" href="mailto:ep3ft8gg@intercom-mail.com") Support
+                        li
+                            a(href='https://twitter.com/checklyHQ', target='_blank') Twitter
+                        li
+                            a(href='https://github.com/checkly/product-roadmap/projects/1', target='_blank') Public Roadmap
+            .col-sm-1
         .row.footer-bottom
             .col-12
                 span Checkly is operated by Pink Robots B.V. from Berlin, DE & Utrecht, NL · Copyright © 2019
