--- a/src/layouts/pricing/list.pug
+++ b/src/layouts/pricing/list.pug
@@ -446,7 +446,7 @@ html(lang='en')
 
         include ../partials/testimonial-full-width
 
-        .container
+        .container.mb-4
           .row
             .col-sm-12.text-center
               h2.py-5 Pricing FAQ
