--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -51,7 +51,8 @@
   <!-- Intercom code-->
   <script>
     window.intercomSettings = {
-      app_id: 'ep3ft8gg'
+      app_id: 'ep3ft8gg',
+      custom_launcher_selector: '#open-intercom-link'
     }
   </script>
   <script async class="optanon-category-2">(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/ep3ft8gg';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();</script>
