--- a/src/layouts/partials/tweets.pug
+++ b/src/layouts/partials/tweets.pug
@@ -2,40 +2,34 @@ section.tweets
   .container
     .row.mb-lg-5.mb-3
       .col-sm-12.text-center
-        h3.section-header What the  people say
+        h3.section-header Meanwhile, on Twitter...
     .row
-      .col-sm-3
+      .col-sm-4
         blockquote.twitter-tweet(data-lang='en')
           p(lang='en', dir='ltr')
             | Just made some simple tests w/
-            a(href='https://twitter.com/checklyHQ?ref_src=twsrc%5Etfw') @checklyhq
+            a(href='https://twitter.com/checklyHQ') @checklyhq
             | . Great features, awesome UI and I 😍 the way to add browser tests. Happy to see such tools coming from the (realworld) neighbourhood.
           | — Stephan Georg (@StephanGeorg)
-          a(href='https://twitter.com/StephanGeorg/status/961704989591777286?ref_src=twsrc%5Etfw') February 8, 2018
-      .col-sm-3
+          a(href='https://twitter.com/StephanGeorg/status/961704989591777286') February 8, 2018
+      .col-sm-4
         blockquote.twitter-tweet(data-lang='en')
           p(lang='en', dir='ltr')
-            | Testing your code before pushing it live won't always give you piece of mind. Gladly there are services like
-            a(href='https://twitter.com/checklyHQ?ref_src=twsrc%5Etfw') @checklyHQ
-            |  that continuously test your endpoints and help you have a good night of sleep. Rock on!
-          | — Daniel Andrade (@dspillere)
-          a(href='https://twitter.com/dspillere/status/1051019490044071936?ref_src=twsrc%5Etfw') October 13, 2018
-      .col-sm-3
+            | Super massive shoutout to the folks over
+            a(href='https://twitter.com/checklyHQ') @checklyHQ
+            |  for building
+            a(href='https://github.com/checkly/puppeteer-recorder') Puppeteer Recorder
+            | Been looking for something like this since the one I used for Casper/Phantom EOL'd.
+          | — Eddie Zaneski (@eddiezane)
+          a(href='https://twitter.com/eddiezane/status/1136078652137824256') June 4, 2019
+      .col-sm-4
         blockquote.twitter-tweet(data-lang='en')
           p(lang='en', dir='ltr')
             | I just found
-            a(href='https://twitter.com/checklyHQ?ref_src=twsrc%5Etfw') @checklyhq
+            a(href='https://twitter.com/checklyHQ') @checklyhq
             | . Awesome monitoring site powered by Puppeteer.
           | — Dario Kondratiuk (@hardkoded)
-          a(href='https://twitter.com/hardkoded/status/1017378473277521921?ref_src=twsrc%5Etfw') July 12, 2018
-      .col-sm-3
-        blockquote.twitter-tweet(data-lang='en')
-          p(lang='en', dir='ltr')
-            | Looking forward to giving
-            a(href='https://twitter.com/checklyHQ?ref_src=twsrc%5Etfw') @checklyhq
-            |  a spin on my next mobile-first, API-first development work! Third-party validation of your work to let you move fast and stay sane, what's not to like? 👍 Keep up the good work, guys!
-          | — Max Vilimpoc (@vilimpoc)
-          a(href='https://twitter.com/vilimpoc/status/1050374338845822976?ref_src=twsrc%5Etfw') October 11, 2018
+          a(href='https://twitter.com/hardkoded/status/1017378473277521921') July 12, 2018
 
 
   script(async='', src='https://platform.twitter.com/widgets.js', charset='utf-8')
