--- a/src/scss/sections/_testimonials.scss
+++ b/src/scss/sections/_testimonials.scss
@@ -38,6 +38,11 @@
   &.testimonial-1 {
     padding-top: $section-top-padding;
     padding-bottom: 2 * $section-bottom-padding;
+
+    .testimonial-card {
+      max-height: 354px;
+    }
+
     .testimonial-text {
       min-height: 160px;
       max-height: 160px;
@@ -53,9 +58,13 @@
   &.testimonial-2 {
     padding-top: $section-top-padding;
     padding-bottom: $section-bottom-padding;
+
+    .testimonial-card {
+      max-height: 620px;
+    }
     .testimonial-text {
       min-height: 100px;
-      max-height: 320px;
+      max-height: 440px;
     }
     .testimonial-portrait {
       img {
