feat: better testimonial layout

--- a/src/layouts/partials/testimonial-full-width.pug
+++ b/src/layouts/partials/testimonial-full-width.pug
@@ -2,7 +2,7 @@ section.testimonial-section.testimonial-2
   .container
     .row
       .col-sm-12.col-md-10.offset-md-1
-        .card.testimonial-card.big-drop-shadow.mb-5.mb-md-0
+        .card.testimonial-card.mb-5.mb-md-0
           .card-block
             a(href='https://www.nomanini.com/', target='_blank')
               img.testimonial-logo(src='/images/testimonials/nomanini_logo.png', alt='customer logo')
