--- a/src/scss/sections/_testimonials.scss
+++ b/src/scss/sections/_testimonials.scss
@@ -56,11 +56,28 @@
   }
 
   &.testimonial-2 {
-    padding-top: $section-top-padding;
+    padding-top: 2 * $section-top-padding;
     padding-bottom: $section-bottom-padding;
 
     .testimonial-card {
       max-height: 620px;
+      .card-block {
+        padding: 2 * $spacer 3 * $spacer;
+        &:before {
+          content: "“";
+          font-family: serif;
+          position: absolute;
+          width: 10px;
+          font-size: 6rem;
+          right: 50%;
+          top: -3rem;
+          color: $brand-primary;
+          @include media-breakpoint-down(sm) {
+            display: none;
+          }
+        }
+      }
+
     }
     .testimonial-text {
       min-height: 100px;
@@ -70,11 +87,6 @@
       img {
         width: 65px;
         margin-right: 1rem;
-      }
-    }
-    .testimonial-card {
-      .card-block {
-        padding: 2 * $spacer 3 * $spacer;
       }
     }
   }
