feat: adds startup discount link

--- a/src/layouts/partials/testimonial-full-width.pug
+++ b/src/layouts/partials/testimonial-full-width.pug
@@ -1,7 +1,7 @@
 section.testimonial-section.testimonial-2
   .container
     .row
-      .col-sm-12.col-md-10.offset-md-1
+      .col-sm-12
         .card.testimonial-card.mb-5.mb-md-0
           .card-block
             a(href='https://www.nomanini.com/', target='_blank')
