style: tweak testimonial

--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -8,6 +8,7 @@
   background-repeat: repeat-x;
   background-size: 100%;
   margin-bottom: $section-bottom-margin;
+  border-bottom: 1px solid $gray-light;
 
   .hero-text {
     padding: 3 * $spacer 0 0 0;
