feat: change growth price

--- a/src/layouts/pricing/list.pug
+++ b/src/layouts/pricing/list.pug
@@ -163,7 +163,7 @@ html(lang='en')
                         .pt-value
                           i.ion-close-round
                     .pt-footer
-                      a.btn.btn-success.btn-block(href='https://app.checklyhq.com/signup') Start free trial
+                      a.btn.btn-success.btn-block(data-signup href='https://app.checklyhq.com/signup') Start free trial
                 .pt-col
                   .pt-block
                     .pt-back
@@ -256,7 +256,7 @@ html(lang='en')
                         .pt-value
                           i.ion-close-round
                     .pt-footer
-                      a.btn.btn-success.btn-block(href='https://app.checklyhq.com/signup') Start free trial
+                      a.btn.btn-success.btn-block(data-signup href='https://app.checklyhq.com/signup') Start free trial
                 .pt-col
                   .pt-block
                     .pt-back
@@ -349,7 +349,7 @@ html(lang='en')
                         .pt-value
                           i.ion-close-round
                     .pt-footer
-                      a.btn.btn-success.btn-block(href='https://app.checklyhq.com/signup') Start free trial
+                      a.btn.btn-success.btn-block(data-signup href='https://app.checklyhq.com/signup') Start free trial
                 .pt-col
                   .pt-block
                     .pt-back
@@ -387,7 +387,7 @@ html(lang='en')
                         .pt-text
                           | Team members
                         .pt-value
-                          | 20
+                          | ∞
                       .pt-list-item
                         .pt-text
                           | Data center locations
@@ -442,7 +442,7 @@ html(lang='en')
                         .pt-value
                           i.ion-checkmark-round
                     .pt-footer
-                      a.btn.btn-success.btn-block(href='https://app.checklyhq.com/signup') Start free trial
+                      a.btn.btn-success.btn-block(data-signup href='https://app.checklyhq.com/signup') Start free trial
 
           .text-muted.text-center Early stage startup, younger than two years? #[a(href="https://checklyhq.typeform.com/to/Pqok1L", target="_blank") Apply for a startup discount]
 
