feat: adds info on custom plans

--- a/src/layouts/pricing/list.pug
+++ b/src/layouts/pricing/list.pug
@@ -444,6 +444,7 @@ html(lang='en')
                     .pt-footer
                       a.btn.btn-success.btn-block(data-signup href='https://app.checklyhq.com/signup') Start free trial
 
+          .text-muted.text-center Need a custom plan for your organisation? Just #[a(href="#", class='open-intercom-link') contact us] and we'll make you a quote.
           .text-muted.text-center Early stage startup, younger than two years? #[a(href="https://checklyhq.typeform.com/to/Pqok1L", target="_blank") Apply for a startup discount]
 
         include ../partials/testimonial-full-width
