feat: new testimonials

--- a/src/layouts/partials/testimonial-three-col-row.pug
+++ b/src/layouts/partials/testimonial-three-col-row.pug
@@ -4,21 +4,6 @@ section.testimonial-section.testimonial-1
       .col-sm-12.col-md-4
         .card.testimonial-card.big-drop-shadow.mb-5.mb-md-0
           .card-block
-            a(href='http://www.insiteintelligence.com/', target='_blank')
-              img.testimonial-logo(src='/images/testimonials/insite_logo.png', alt='customer logo')
-            p.testimonial-text
-              | "Checkly makes it simple and easy for us to measure performance and automate the manual
-              | tasks of ensuring our web-based platform is available for our customers."
-            .testimonial-portrait
-              img(src='/images/testimonials/insite_portrait.png', alt='customer portrait')
-            .testimonial-name-badge
-              .text-muted.font-weight-bold Daniel Schleig
-              .text-muted IT & Systems Lead
-              a.text-muted(href='http://www.insiteintelligence.com/' target='_blank') insiteintelligence.com
-
-      .col-sm-12.col-md-4
-        .card.testimonial-card.big-drop-shadow.mb-5.mb-md-0
-          .card-block
             a(href='https://supplypike.com', target='_blank')
               img.testimonial-logo(src='/images/testimonials/supplypike_logo.png')
             p.testimonial-text
@@ -34,6 +19,21 @@ section.testimonial-section.testimonial-1
       .col-sm-12.col-md-4
         .card.testimonial-card.big-drop-shadow.mb-5.mb-md-0
           .card-block
+            a(href='http://www.dfuse.io/', target='_blank')
+              img.testimonial-logo(src='/images/testimonials/dfuse_logo.png', alt='dfuse logo')
+            p.testimonial-text
+              | "Checkly is super easy to setup and the best option for us to test our Websocket API.
+              | We depend on it 24/7 and it’s our go-to place when PagerDuty wakes us up at 3am"
+            .testimonial-portrait
+              img(src='/images/testimonials/dfuse_portrait.png', alt='customer portrait')
+            .testimonial-name-badge
+              .text-muted.font-weight-bold François Proulx
+              .text-muted Senior DevSecOps
+              a.text-muted(href='http://www.dfuse.io/' target='_blank') dfuse.io
+
+      .col-sm-12.col-md-4
+        .card.testimonial-card.big-drop-shadow.mb-5.mb-md-0
+          .card-block
             a(href='https://lyfegen.com/', target='_blank')
               img.testimonial-logo(src='/images/testimonials/lyfegen_logo.png')
             p.testimonial-text
@@ -44,4 +44,16 @@ section.testimonial-section.testimonial-1
               .text-muted.font-weight-bold James Gannon
               .text-muted Chief Digital Officer
               a.text-muted(href='https://lyfegen.com/' target='_blank') lyfegen.com
+
+            //a(href='http://www.insiteintelligence.com/', target='_blank')
+            //  img.testimonial-logo(src='/images/testimonials/insite_logo.png', alt='customer logo')
+            //p.testimonial-text
+            //  | "Checkly makes it simple and easy for us to measure performance and automate the manual
+            //  | tasks of ensuring our web-based platform is available for our customers."
+            //.testimonial-portrait
+            //  img(src='/images/testimonials/insite_portrait.png', alt='customer portrait')
+            //.testimonial-name-badge
+            //  .text-muted.font-weight-bold Daniel Schleig
+            //  .text-muted IT & Systems Lead
+            //  a.text-muted(href='http://www.insiteintelligence.com/' target='_blank') insiteintelligence.com
 
