docs: adds CI/CD docs

--- a/src/layouts/partials/all-features.pug
+++ b/src/layouts/partials/all-features.pug
@@ -31,5 +31,5 @@ section.all-features-section
         h5 Teams & users
         p <a href='/docs/teams/' class="info-link">Add team members to your account to collaborate</a>. Comes with full role based access control.
       .col-sm-4
-        h5 On-demand triggers
-        p <a href='/docs/browser-checks/triggers/' class="info-link">Trigger your checks</a> using a simple cURL command from your CI/CD pipeline or just the command line.
+        h5 CI/CD integration
+        p <a href='/docs/cicd/triggers/' class="info-link">Trigger your checks</a> on Github push & PR's or using a simple cURL command from your CI/CD pipeline.
