feat: adds Zeit to testimonials

--- a/src/layouts/partials/testimonial-three-col-row.pug
+++ b/src/layouts/partials/testimonial-three-col-row.pug
@@ -14,7 +14,8 @@ section.testimonial-section.testimonial-1
             .testimonial-name-badge
               .text-muted.font-weight-bold Kanat Bekterimov
               .text-muted Software Engineer Manager
-              a.text-muted(href='https://supplypike.com/' target='_blank') supplypike.com
+              a.text-muted(href='https://supplypike.com/' target='_blank') supplypike.
+
 
       .col-sm-12.col-md-4
         .card.testimonial-card.big-drop-shadow.mb-5.mb-md-0
