feat: adds jobs page

--- a/src/layouts/partials/footer.pug
+++ b/src/layouts/partials/footer.pug
@@ -32,6 +32,8 @@ footer.footer
                         li
                             a(href='/about') About us
                         li
+                            a(href='/jobs') Jobs
+                        li
                             a(href='/terms') Terms of Use
                         li
                             a(href='/privacy') Privacy policy
