feat: update about page

--- a/src/layouts/_default/list.pug
+++ b/src/layouts/_default/list.pug
@@ -5,6 +5,6 @@ html(lang='en')
         include ../partials/navbar.pug
         .main.container.py-5
             .row
-                .col-sm-12
+                .col-sm-12.col-lg-10.offset-lg-1
                     span.markdown #{'{{.Content}}'}
         include ../partials/footer.pug
