--- a/src/layouts/whats-new/list.pug
+++ b/src/layouts/whats-new/list.pug
@@ -7,11 +7,11 @@ html(lang='en')
             .alert-info-pattern.mb-5
                 .container
                     .row
-                        .col-sm-12.col-md-8.offset-md-2
+                        .col-sm-12.col-lg-8.offset-lg-2
                             h1.py-5.mb-0.font-weight-normal News & product updates
             .container.mb-5
                 .row
-                    .col-sm-12.col-md-8.offset-md-2
+                    .col-sm-12.col-lg-8.offset-lg-2
                         | !{'{{ range first 10 .Data.Pages }}'}
                         article.article
                             .article-header
