feat: adds we're hiring badge

--- a/src/layouts/partials/footer.pug
+++ b/src/layouts/partials/footer.pug
@@ -33,6 +33,7 @@ footer.footer
                             a(href='/about') About us
                         li
                             a(href='/jobs') Jobs
+                              .badge.badge-accent.ml-2 we're hiring!
                         li
                             a(href='/terms') Terms of Use
                         li
