--- a/src/layouts/partials/navbar.pug
+++ b/src/layouts/partials/navbar.pug
@@ -4,8 +4,9 @@ nav.navbar.navbar-toggleable-md.fixed-top
           span
           span
           span
-        a.navbar-brand(href='/')
+        a.navbar-brand.mr-2(href='/')
           img(src='/images/text_racoon_logo.svg', width='120', alt='checkly logo')
+        a.callout(href='/jobs') We're hiring!
         #navbarSupportedContent.collapse.navbar-collapse
           ul.navbar-nav.ml-auto
             li.nav-item.dropdown
