feat: many typos

--- a/src/layouts/partials/testimonial-quote-full-width-1.pug
+++ b/src/layouts/partials/testimonial-quote-full-width-1.pug
@@ -4,7 +4,7 @@ section.testimonial-section.testimonial-3
       .col-sm-12.col-lg-8.offset-lg-2
         .text-center.mb-5
           p.testimonial-text
-            | "Checkly is incredible: It combines Pingdom, Ghost Inspector and Assertible all in the same app, and the insight are much more detailed."
+            | "Checkly is incredible: It combines Pingdom, Ghost Inspector and Assertible all in the same app, and the insights are much more detailed."
           .testimonial-name-badge
             .text-muted Leo Lamprecht | Head of Product
               a.testimonial-logo(href='https://zeit.co/', target='_blank')
