--- a/src/layouts/partials/testimonial-three-col-row.pug
+++ b/src/layouts/partials/testimonial-three-col-row.pug
@@ -14,7 +14,7 @@ section.testimonial-section.testimonial-1
             .testimonial-name-badge
               .text-muted.font-weight-bold Kanat Bekterimov
               .text-muted Software Engineer Manager
-              a.text-muted(href='https://supplypike.com/' target='_blank') supplypike.
+              a.text-muted(href='https://supplypike.com/' target='_blank') supplypike.com
 
 
       .col-sm-12.col-md-4
