style: minor tweak

--- a/site/layouts/partials/hero-section.html
+++ b/site/layouts/partials/hero-section.html
@@ -1,2 +1,18 @@
-<section class="hero-section"><div class="container"><div class="row"><div class="col-sm-12 col-md-10 offset-md-1 text-center"><h1 class="hero-text">A better way to monitor your APIs and site click flows</h1></div><div class="col-sm-12 col-md-8 offset-md-2 text-center"><p class="hero-sub mb-3">Monitor the performance and correctness of your API endpoints & vital site transactions from a single,
-simple dashboard.</p><div class="mb-4"><a class="signup-button btn btn-success btn-lg" data-signup="data-signup" href="https://app.checklyhq.com/signup">Start your free trial</a></div></div></div><div class="row"><div class="col-sm-12 text-center"><img class="hero-image img-fluid" src="/images/dashboard-screen@2x.png" alt="checkly monitoring dashboard"/></div></div></div></section>
+<section class="hero-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-10 offset-md-1 text-center"><h1 class="hero-text">A better way to monitor your APIs
+        and site click flows</h1></div>
+      <div class="col-sm-12 col-md-8 offset-md-2 text-center"><p class="hero-sub mb-3">Monitor the performance and
+        correctness of your API endpoints & vital site transactions from a single,
+        simple dashboard.</p>
+        <div class="mb-4"><a class="signup-button btn btn-success btn-lg" data-signup="data-signup"
+                             href="https://app.checklyhq.com/signup">Start your free trial</a></div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12 text-center"><img class="hero-image img-fluid" src="/images/dashboard-screen@2x.png"
+                                              alt="checkly monitoring dashboard"/></div>
+    </div>
+  </div>
+</section>
