feat: add support email address

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -41,7 +41,7 @@
       <div class="col-sm-3">
         <div class="mb-3 mb-md-0"><h6>Connect</h6>
           <ul>
-            <li><a id="open-intercom-link" href="mailto:ep3ft8gg@intercom-mail.com">Support</a></li>
+            <li><a class="open-intercom-link" href="mailto:support@checklyhq.com">Support</a></li>
             <li><a href="https://twitter.com/checklyHQ" target="_blank">Twitter</a></li>
             <li><a href="https://github.com/checkly/product-roadmap/projects/1" target="_blank">Public Roadmap</a></li>
           </ul>
