--- a/site/layouts/pricing/list.html
+++ b/site/layouts/pricing/list.html
@@ -617,7 +617,7 @@
         </div>
         <div class="text-muted text-center">
           Need a custom plan for your organisation? Just
-          <a class="open-intercom-link" href="#">contact us</a> and we'll make
+          <a class="open-intercom-link" href="mailto:support@checklyhq.com">contact us</a> and we'll make
           you a quote.
         </div>
         <div class="text-muted text-center">
