--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -1,62 +1,75 @@
-<title>{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} | Checkly {{ end }}</title><!--meta(charset='utf-8')-->
-<meta name="description"
-      content="{{ with .Description }}{{ . | markdownify }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . | markdownify}}{{ end }}{{ end }}{{ end }}">
-<meta name="viewport" content="width=device-width" initial-scale="1" maximum-scale="1">
-<meta property="og:type" content="article">
-<meta property="og:title" content="{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} | Checkly {{ end }}">
-<meta property="og:description"
-      content="{{ with .Description }}{{ . | markdownify }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . | markdownify}}{{ end }}{{ end }}{{ end }}">
-<meta property="og:type" content="{{ if .IsPage }}article{{ else }}website{{ end }}">
-<meta property="og:image"
-      content="{{ if .Params.featured_image }}{{ .Params.featured_image }}{{ else}}https://checklyhq.com/images/dashboard-screen@2x.png{{end}}">
-<meta property="twitter:card" content="summary">
-<meta property="twitter:title" content="{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} | Checkly {{ end }}">
-<meta property="twitter:description"
-      content="{{ with .Description }}{{ . | markdownify }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . | markdownify}}{{ end }}{{ end }}{{ end }}">
-<meta property="og:image"
-      content="{{ if .Params.featured_image }}{{ .Params.featured_image }}{{ else }}https://checklyhq.com/images/dashboard-screen@2x.png{{end}}">
-<meta name="msvalidate.01" content="36F243A91FAA24DE468D8A8EECF33554">
-<link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700" rel="stylesheet">
-<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css">
-<link rel="icon" type="image/png" href="/images/racoon_favicon.png">
-<link rel="alternate" href="{{ .Permalink }}" hreflang="en-us">
-<link rel="canonical" href="{{ .Permalink }}"><!-- main styles-->
-<link rel="stylesheet" href="/css/style.css">
-<style>.qc-cmp-ui {
-  background-color: #45c8f1 !important;
-}
+<head>
+  <title>{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} | Checkly {{ end }}</title>
+  <meta charset="utf-8" />
+  <meta name="description" content="{{ with .Description }}{{ . | markdownify }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . | markdownify}}{{ end }}{{ end }}{{ end }}" />
+  <meta name="viewport" content="width=device-width" initial-scale="1" maximum-scale="1" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} | Checkly {{ end }}" />
+  <meta property="og:description" content="{{ with .Description }}{{ . | markdownify }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . | markdownify}}{{ end }}{{ end }}{{ end }}" />
+  <meta property="og:type" content="{{ if .IsPage }}article{{ else }}website{{ end }}" />
+  <meta property="og:image" content="{{ if .Params.featured_image }}{{ .Params.featured_image }}{{ else}}https://checklyhq.com/images/dashboard-screen@2x.png{{end}}" />
+  <meta property="twitter:card" content="summary" />
+  <meta property="twitter:title" content="{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} | Checkly {{ end }}" />
+  <meta property="twitter:description" content="{{ with .Description }}{{ . | markdownify }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . | markdownify}}{{ end }}{{ end }}{{ end }}" />
+  <meta property="og:image" content="{{ if .Params.featured_image }}{{ .Params.featured_image }}{{ else }}https://checklyhq.com/images/dashboard-screen@2x.png{{end}}" />
+  <meta name="msvalidate.01" content="36F243A91FAA24DE468D8A8EECF33554" />
+  <link rel="icon" type="image/png" href="/images/racoon_favicon.png" />
+  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css"/>
+  <link rel="alternate" href="{{ .Permalink }}" hreflang="en-us" />
+  <link rel="canonical" href="{{ .Permalink }}" />
+  <link rel="stylesheet" href="/css/style.css" />
+  <script async src="https://cdn.cookielaw.org/consent/e4c8a868-c0ad-4c0c-b61e-f6eb6cad2810.js" type="text/javascript" charset="UTF-8"></script>
+  <script type="text/javascript">
+    function OptanonWrapper() {}
+  </script>
+  <style>
+    .qc-cmp-ui {
+      background-color: #45c8f1 !important;
+    }
 
-.qc-cmp-publisher-purposes-table .qc-cmp-table-header {
-  background-color: #fafafa !important;
-}
+    .qc-cmp-publisher-purposes-table .qc-cmp-table-header {
+      background-color: #fafafa !important;
+    }
 
-.qc-cmp-publisher-purposes-table .qc-cmp-table-row {
-  background-color: #ffffff !important;
-}</style><!-- Global site tag (gtag.js) - Google Analytics-->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110523681-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-function gtag() {
-  dataLayer.push(arguments);
-}
+    .qc-cmp-publisher-purposes-table .qc-cmp-table-row {
+      background-color: #ffffff !important;
+    }
+  </style>
+  <!-- Global site tag (gtag.js) - Google Analytics-->
+  <script type="text/plain" async src="https://www.googletagmanager.com/gtag/js?id=UA-110523681-1" class="optanon-category-2"></script>
+  <script type="text/plain" async class="optanon-category-2">
+    window.dataLayer = window.dataLayer || [];
 
-gtag('js', new Date());
-gtag('config', 'UA-110523681-1');
-</script>
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'UA-110523681-1');
+  </script>
+  <!-- Intercom code-->
+  <script>
+    window.intercomSettings = {
+      app_id: 'ep3ft8gg',
+      custom_launcher_selector: '.open-intercom-link'
+    }
+  </script>
+  <script async class="optanon-category-2">(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/ep3ft8gg';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();</script>
 
-<script>if (location.host === 'checklyhq.com') {
-  window.heap = window.heap || [], heap.load = function (e, t) {
-    window.heap.appid = e, window.heap.config = t = t || {};
-    var r = t.forceSSL || "https:" === document.location.protocol, a = document.createElement("script");
-    a.type = "text/javascript", a.async = !0, a.src = (r ? "https:" : "http:") + "//cdn.heapanalytics.com/js/heap-" + e + ".js";
-    var n = document.getElementsByTagName("script")[0];
-    n.parentNode.insertBefore(a, n);
-    for (var o = function (e) {
-      return function () {
-        heap.push([e].concat(Array.prototype.slice.call(arguments, 0)))
-      }
-    }, p = ["addEventProperties", "addUserProperties", "clearEventProperties", "identify", "removeEventProperty", "setEventProperties", "track", "unsetEventProperty"], c = 0; c < p.length; c++) heap[p[c]] = o(p[c])
-  };
-  heap.load("3553865455");
-}</script>
+  <script type="text/javascript" class="optanon-category-2">
+    window.heap=window.heap||[],heap.load=function(e,t){window.heap.appid=e,window.heap.config=t=t||{};var r=t.forceSSL||"https:"===document.location.protocol,a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=(r?"https:":"http:")+"//cdn.heapanalytics.com/js/heap-"+e+".js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(a,n);for(var o=function(e){return function(){heap.push([e].concat(Array.prototype.slice.call(arguments,0)))}},p=["addEventProperties","addUserProperties","clearEventProperties","identify","resetIdentity","removeEventProperty","setEventProperties","track","unsetEventProperty"],c=0;c<p.length;c++)heap[p[c]]=o(p[c])};
+    heap.load("3553865455");
+  </script>
+
+  <!-- Hotjar Tracking Code for https://app.checklyhq.com -->
+  <script type="text/javascript" class="optanon-category-2">
+    (function(h,o,t,j,a,r){
+      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+      h._hjSettings={hjid:717179,hjsv:6};
+      a=o.getElementsByTagName('head')[0];
+      r=o.createElement('script');r.async=1;
+      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+      a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+  </script>
+</head>
