--- a/src/scss/_docs.scss
+++ b/src/scss/_docs.scss
@@ -111,9 +111,12 @@
 
   &-page {
     min-width: 20rem;
+    max-width: 60rem;
     flex-grow: 1;
     padding: 0 1rem;
-    margin-top: $top;
+    margin-top: $top + 2rem;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   &-toc {
