style: minor style tweaks

--- a/src/scss/_docs.scss
+++ b/src/scss/_docs.scss
@@ -1,6 +1,6 @@
 .docs {
-  $top: 4rem;
-  $menu-width: 15rem;
+  $top: 5rem;
+  $menu-width: 16rem;
   $toc-width: 14rem;
 
   .algolia-autocomplete .ds-dropdown-menu {
@@ -16,7 +16,7 @@
 
   &-menu {
     flex: 0 0 $menu-width;
-    font-size: .875rem;
+    font-size: 1rem;
 
     nav {
       width: $menu-width;
@@ -25,7 +25,7 @@
       overflow-x: hidden;
       overflow-y: auto;
       margin: 0;
-      margin-top: $top + 5rem;
+      margin-top: $top;
       top: 0;
       position: fixed;
       ul {
@@ -41,17 +41,17 @@
     }
 
     &-search {
-      padding: 0 1rem;
-      position: fixed;
-      top: $top + 1rem;
+      padding-bottom: 1rem;
+      position: sticky;
+      top: 1rem;
       z-index: 1000;
       background-color: white;
     }
 
     &-title {
-      font-weight: 500;
+      font-weight: 600;
       text-transform: uppercase;
-      font-size: 0.750rem;
+      font-size: 0.875rem;
       margin-bottom: 0.5rem
     }
     &-sub {
@@ -92,7 +92,7 @@
     }
 
     .api-reference-link {
-      padding-top: .5rem;
+      padding-top: 1rem;
       margin-bottom: 1rem;
       display: inline-block;
       color: $gray-darkish;
@@ -114,7 +114,7 @@
     max-width: 60rem;
     flex-grow: 1;
     padding: 0 1rem;
-    margin-top: $top + 2rem;
+    margin-top: $top + 1rem;
     margin-left: auto;
     margin-right: auto;
   }
@@ -122,6 +122,7 @@
   &-toc {
     flex: 0 0 $toc-width;
     font-size: .875rem;
+    margin-right: auto;
 
     nav {
       width: $toc-width;
