--- a/src/scss/_docs.scss
+++ b/src/scss/_docs.scss
@@ -1,6 +1,6 @@
 .docs {
   $top: 5rem;
-  $menu-width: 16rem;
+  $menu-width: 15rem;
   $toc-width: 14rem;
 
   .algolia-autocomplete .ds-dropdown-menu {
@@ -16,7 +16,7 @@
 
   &-menu {
     flex: 0 0 $menu-width;
-    font-size: 1rem;
+    font-size: .875rem;
 
     nav {
       width: $menu-width;
@@ -51,7 +51,7 @@
     &-title {
       font-weight: 600;
       text-transform: uppercase;
-      font-size: 0.875rem;
+      font-size: 0.675rem;
       margin-bottom: 0.5rem
     }
     &-sub {
