--- a/src/scss/_docs.scss
+++ b/src/scss/_docs.scss
@@ -49,9 +49,9 @@
     }
 
     &-title {
-      font-weight: 600;
-      text-transform: uppercase;
-      font-size: 0.675rem;
+      display: block;
+      font-weight: 500;
+      font-size: 0.875rem;
       margin-bottom: 0.5rem
     }
     &-sub {
@@ -61,6 +61,7 @@
 
       &-item {
         margin-bottom: .3rem;
+        padding-left: .5rem;
         a {
           color: $gray-darkish;
           text-decoration: none;
@@ -71,8 +72,8 @@
         }
         &.active {
           a {
-            color: $brand-primary;
-            font-weight: 400;
+            color: $gray-dark;
+            font-weight: 500;
           }
         }
       }
@@ -113,7 +114,7 @@
     min-width: 20rem;
     max-width: 60rem;
     flex-grow: 1;
-    padding: 0 1rem;
+    padding: 0 2rem;
     margin-top: $top + 1rem;
     margin-left: auto;
     margin-right: auto;
