--- a/site/layouts/docs/single.html
+++ b/site/layouts/docs/single.html
@@ -5,7 +5,8 @@
       <article class="markdown">
         <h1>{{ .Title }}</h1>
         {{ if .Page.TableOfContents }}
-        <div class="docs-toc-mobile">
+        <div class="docs-toc-mobile mb-5 pt-3">
+          <div class="docs-toc-header mb-3 pt-3">On this page</div>
           {{ .Page.TableOfContents }}
         </div>
         {{ end }}
@@ -20,7 +21,8 @@
       {{end}}
     </div>
     {{ if .Page.TableOfContents }}
-    <aside class="docs-toc">
+    <aside class="docs-toc mb-3">
+      <div class="docs-toc-header">On this page</div>
       {{ .Page.TableOfContents }}
     </aside>
     {{ end }}
