--- a/site/layouts/pricing/list.html
+++ b/site/layouts/pricing/list.html
@@ -100,8 +100,10 @@
                     ></span
                   >
                 </div>
-                <div class="pt-list-item">SAML login</div>
+                <div class="pt-list-item">SAML / SSO login</div>
                 <div class="pt-list-item">Invoice payment</div>
+                <div class="pt-list-item">Concierge onboarding</div>
+                <div class="pt-list-item">Support priority via chat</div>
               </div>
             </div>
             <div class="pt-cols-main">
@@ -212,13 +214,25 @@
                       </div>
                     </div>
                     <div class="pt-list-item">
-                      <div class="pt-text">SAML Login</div>
+                      <div class="pt-text">SAML / SSO Login</div>
                       <div class="pt-value">
                         <i class="ion-close-round"></i>
                       </div>
                     </div>
                     <div class="pt-list-item">
                       <div class="pt-text">Invoice payment</div>
+                      <div class="pt-value">
+                        <i class="ion-close-round"></i>
+                      </div>
+                    </div>
+                    <div class="pt-list-item">
+                      <div class="pt-text">Concierge onboarding</div>
+                      <div class="pt-value">
+                        <i class="ion-close-round"></i>
+                      </div>
+                    </div>
+                    <div class="pt-list-item">
+                      <div class="pt-text">Support priority via chat</div>
                       <div class="pt-value">
                         <i class="ion-close-round"></i>
                       </div>
@@ -339,13 +353,25 @@
                       </div>
                     </div>
                     <div class="pt-list-item">
-                      <div class="pt-text">SAML Login</div>
+                      <div class="pt-text">SAML / SSO Login</div>
                       <div class="pt-value">
                         <i class="ion-close-round"></i>
                       </div>
                     </div>
                     <div class="pt-list-item">
                       <div class="pt-text">Invoice payment</div>
+                      <div class="pt-value">
+                        <i class="ion-close-round"></i>
+                      </div>
+                    </div>
+                    <div class="pt-list-item">
+                      <div class="pt-text">Concierge onboarding</div>
+                      <div class="pt-value">
+                        <i class="ion-close-round"></i>
+                      </div>
+                    </div>
+                    <div class="pt-list-item">
+                      <div class="pt-text">Support priority via chat</div>
                       <div class="pt-value">
                         <i class="ion-close-round"></i>
                       </div>
@@ -463,13 +489,25 @@
                       </div>
                     </div>
                     <div class="pt-list-item">
-                      <div class="pt-text">SAML Login</div>
+                      <div class="pt-text">SAML / SSO Login</div>
                       <div class="pt-value">
                         <i class="ion-close-round"></i>
                       </div>
                     </div>
                     <div class="pt-list-item">
                       <div class="pt-text">Invoice payment</div>
+                      <div class="pt-value">
+                        <i class="ion-close-round"></i>
+                      </div>
+                    </div>
+                    <div class="pt-list-item">
+                      <div class="pt-text">Concierge onboarding</div>
+                      <div class="pt-value">
+                        <i class="ion-close-round"></i>
+                      </div>
+                    </div>
+                    <div class="pt-list-item">
+                      <div class="pt-text">Support priority via chat</div>
                       <div class="pt-value">
                         <i class="ion-close-round"></i>
                       </div>
@@ -491,14 +529,14 @@
                   <div class="pt-title text-primary">Business</div>
                   <div class="pt-price">
                     <div class="price-block">
-                      <span class="price" data-business-price>199</span
+                      <span class="price" data-business-price>499</span
                       ><span data-billing-interval>/ month</span>
                     </div>
                     <div
                       class="strike-out-price"
                       data-business-strikeout-price
                     >
-                      $199 / month
+                      $499 / month
                     </div>
                   </div>
                   <p>Keeps the enterprise purring like a kitten.</p>
@@ -590,13 +628,25 @@
                       </div>
                     </div>
                     <div class="pt-list-item">
-                      <div class="pt-text">SAML Login</div>
+                      <div class="pt-text">SAML / SSO Login</div>
                       <div class="pt-value">
                         <i class="ion-checkmark-round"></i>
                       </div>
                     </div>
                     <div class="pt-list-item">
                       <div class="pt-text">Invoice payment</div>
+                      <div class="pt-value">
+                        <i class="ion-checkmark-round"></i>
+                      </div>
+                    </div>
+                    <div class="pt-list-item">
+                      <div class="pt-text">Concierge onboarding</div>
+                      <div class="pt-value">
+                        <i class="ion-checkmark-round"></i>
+                      </div>
+                    </div>
+                    <div class="pt-list-item">
+                      <div class="pt-text">Support priority via chat</div>
                       <div class="pt-value">
                         <i class="ion-checkmark-round"></i>
                       </div>
